Ensure popup is visible at small widths

--- a/static/style.css
+++ b/static/style.css
@@ -119,7 +119,9 @@ code {
 @media (max-width: 700px) {
   .emojicon {
     display: inline-block;
-    position: static;
+    position: relative;
+    bottom: 0;
+    right: 0;
     width: auto;
   }
   .emojicon img {
